@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-26T08:21:19Z",
-  "count_outdated" : 759,
-  "uniques_outdated" : 285,
+  "timestamp" : "2022-10-27T16:25:49Z",
+  "count_outdated" : 760,
+  "uniques_outdated" : 286,
   "count" : 767,
   "uniques" : 291,
   "views" : [
-    {
-      "timestamp": "2022-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-17T00:00:00Z",
       "count": 1,
